# attribute-search-engine

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
benches/: insert_benchmark.rs  search_benchmark.rs
benches/indices/: mod.rs
src/: attributes.rs  engine.rs  error.rs  index.rs  lib.rs  query.rs  query_lexer.rs  query_parser.rs
src/index/: btree_range.rs  exact.rs  hashmap.rs  mod.rs  prefix.rs  range.rs
src/index/prefix/: mod.rs  tree.rs
tests/: network.rs  persons.rs  simple.rs
