[package]
name = "attribute-search-engine"
version = "0.2.1"
authors = ["Nicolas Hollmann"]
edition = "2021"
description = "Generic search engine for rows with attributes using different matchers."
readme = "README.md"
repository = "https://github.com/NHollmann/attribute-search-engine"
documentation = "https://docs.rs/attribute-search-engine"
license = "MIT"
keywords = ["search-engine", "attributes"]
publish = ["crates-io"]

[dependencies]
regex = "1.11.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "search_benchmark"
harness = false
