[package]
name = "attribute-search-engine"
version = "0.4.0"
authors = ["Nicolas Hollmann"]
edition = "2021"
description = "Generic search engine for rows with attributes using different matchers."
readme = "README.md"
repository = "https://github.com/NHollmann/attribute-search-engine"
documentation = "https://docs.rs/attribute-search-engine"
license = "MIT"
keywords = ["search-engine", "attributes"]
publish = ["crates-io"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "search_benchmark"
harness = false

[[bench]]
name = "insert_benchmark"
harness = false
